Kubernetes/NginxPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-angular-pod
  labels:
    app: frontend
spec:
  containers:
    - name: angular-nginx-eco
      image: khaledmahmoud7/eco-front:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      # livenessProbe:
      #   httpGet:
      #     path: /api
      #     port: 80
      #   initialDelaySeconds: 30
      #   periodSeconds: 10
