Kubernetes/apiService.yml
apiVersion: v1
kind: Service
metadata:
  name: ecoback-service
spec:
  selector:
    app: eco-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
