Kubernetes/nginxDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-front
  labels:
    app: eco-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eco-front
  template:
    metadata:
      name: eco-front
      labels:
        app: eco-front
    spec:
      containers:
        - name: eco-front
          image: khaledmahmoud7/eco-front:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          # livenessProbe:
          #   httpGet:
          #     path: /api
          #     port: 80
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: eco-nginx-service
spec:
  selector:
    app: eco-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
  #     nodePort: 32100
  # type: NodePort
