Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eco-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.ecopowerhub.com
        - api.ecopowerhub.com
        - promethues.ecopowerhub.com
        - grafana.ecopowerhub.com
      secretName: ecopower-tls-secret
  rules:
  - host: www.ecopowerhub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eco-nginx-service
            port:
              number: 80  
  - host: api.ecopowerhub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eco-backend-service
            port:
              number: 80  
  - host: promethues.ecopowerhub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
  - host: grafana.ecopowerhub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
